--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "license": "All rights reserved",
   "main": "js/LiveBPMN.js",
   "name": "BPMiNer",
-  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bab64/BPMiNer.git"
+  },
+  "version": "1.0.5",
   "scripts": {
-    "configuration": "tsc --showConfig",
-    "construction": "tsc",
+    "configuration": "npx tsc --showConfig",
+    "compilation": "npx tsc",
     "BOUNDARY_EVENTS": "node js/TEST_CASES/Boundary_events",
     "CYCLE": "node js/TEST_CASES/Cycle_from_exclusiveGateway",
     "INCLUSIVE": "node js/TEST_CASES/Inclusive_gateway",
@@ -17,16 +21,17 @@
     "TEST_CASE_1b": "node js/TEST_CASES/TEST_CASE_1b",
     "TEST_CASE_2a": "node js/TEST_CASES/TEST_CASE_2a",
     "TEST_CASE_3": "node js/TEST_CASES/TEST_CASE_3",
-    "TEST_CASE_3a": "node js/TEST_CASES/TEST_CASE_3a"
+    "TEST_CASE_3a": "node js/TEST_CASES/TEST_CASE_3a",
+    "TRAIN": "node js/TEST_CASES/TRAIN"
   },
   "dependencies": {
     "bpmn-js": "^8.10.0",
-    "bpmn-moddle": "^7.1.3",
+    "bpmn-moddle": "^8.0.1",
     "scion-core": "^1.5.5",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "typescript": "^4.9.5"
+    "@types/node": "^18.17.1",
+    "typescript": "^5.1.6"
   }
 }
