--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "rimraf js node_modules package-lock.json",
     "configuration": "npx tsc --showConfig",
     "compilation": "npx tsc",
-    "save": "git add . && git commit -a -m \"April 17, 2025\" && git remote && git push",
+    "git-init": "git init && git remote add BPMiNer https://github.com/Bab64/BPMiNer.git",
+    "save": "git add . && git commit -a -m \"April 17, 2025\" && git remote && git push BPMiNer --force",
     "BOUNDARY_EVENTS": "node js/TEST_CASES/Boundary_events",
     "CYCLE": "node js/TEST_CASES/Cycle_from_exclusiveGateway",
     "INCLUSIVE": "node js/TEST_CASES/Inclusive_gateway",
